# testing-qgama-branch

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  Doxyfile  QuickStart.md  QuickStart.txt  README.build  README.md  README_build.md  common.pri  configure.h.in  gama-q2.pri  gama-q2.pro  gama-qt.dox  gama-qt.pri  gama-qt.pro  libgama.pri  qgama.dox  qgama_c++.md
.var/: deploy-qgama.bat
deploy-win64/: deploy-qgama-2.06.1.bat  deploy-qgama-2.06.1.ps1  deploy-qgama.ps1
doc/: INSTALL.t2t  build.sh
gama/: gama.pri  gama.pro
gama-lib/: gama-lib.pro  gama.pri
gama-local/: gama-local.pro  main.cpp
gama-q2/: adjustment.cpp  adjustment.h  adjustmentresults.cpp  adjustmentresults.h  adjustmentresults.ui  constants.cpp  constants.h  dbconnectdialog.cpp  dbconnectdialog.h  dbconnectdialog.ui  dbfunctions.cpp  drawsettings.cpp  drawsettings.h  drawsettings.ui  gama-q2.pri  gama-q2.pro  gama-q2.qrc  gamaq2controlpanel.cpp  gamaq2controlpanel.h  gamaq2help.cpp  gamaq2help.h  gamaq2interfaces.h  importconfigurationfile.cpp  importconfigurationfile.h  insertclusterdialog.cpp  insertclusterdialog.h  insertclusterdialog.ui  insertobservationdialog.cpp  insertobservationdialog.h  libgama.pri  lineeditdelegate.h  main.cpp  networkadjustmentpanel.cpp  networkadjustmentpanel.h  networkadjustmentpanel.ui  networksvg.cpp  networksvg.h  observationeditor.cpp  observationeditor.h  observationtablemodel.cpp  (+17 more)
gama-q2-plugins/adjustmentdemoplugin/: adjustmentdemoplugin.cpp  adjustmentdemoplugin.h  adjustmentdemoplugin.pro
gama-q2-plugins/dbdemoplugin/: CMakeLists.txt  dbdemoplugin.cpp  dbdemoplugin.h  dbdemoplugin.pro
gama-q2/examples/: example_01.gkf  example_02.gkf  example_03.gkf
gama-q2/help/: gama-q2.html
gama-q2/libgama/: libgama.pri  libgama.pro
libgama/: libgama.pri  libgama.pro
misc/: .gitignore  diff2dirs.sh  make-dist.sh  q2-icon-01.xcf  q2-icon-02.xcf
misc/gen-gama-pro/: CMakeLists.txt  README  gama-local-pro.cpp
misc/sourceforge/: README.sourceforge
misc/sourceforge/new-release/: README.GNU_gama
misc/sourceforge/new-release/0-MISSING_vcruntime140_1.dll/: README
qgama/: adjustment.cpp  adjustment.h  constants.cpp  constants.h  dbconnectdialog.cpp  dbconnectdialog.h  dbconnection.cpp  dbconnection.h  dbfunctions.cpp  dbfunctions.h  drawsettings.cpp  drawsettings.h  gamaq2controlpanel.cpp  gamaq2help.cpp  gamaq2interfaces.h  importconfigurationfile.cpp  importconfigurationfile.h  importkrummnetworkfile.cpp  importkrummnetworkfile.h  insertclusterdialog.cpp  insertclusterdialog.h  insertobservationdialog.cpp  lineeditdelegate.cpp  lineeditdelegate.h  main.cpp  networkadjustmentpanel.cpp  networkadjustmentpanel.h  observationeditor.cpp  observationeditor.h  observationtablemodel.cpp  observationtablemodel.h  parametereditor.cpp  parametereditor.h  pointeditor.cpp  pointeditor.h  pointtablemodel.h  qgama.qrc  qgamacontrolpanel.cpp  qgamacontrolpanel.h  qgamahelp.cpp  (+11 more)
qgama-plugins/adjustmentdemoplugin/: CMakeLists.txt  adjustmentdemoplugin.h
qgama-plugins/dbdemoplugin/: CMakeLists.txt  dbdemoplugin.cpp  dbdemoplugin.h
qgama/examples/: example_04a.gkf  example_04b.gkf  examples-sqlite3.db
qgama/help/: qgama.html  qgama.md
src/gama-q2/: adjustment.cpp  adjustment.h  adjustmentresults.cpp  adjustmentresults.ui  constants.cpp  constants.h  covariancematrixeditor.cpp  covariancematrixeditor.h  covariancematrixeditor.ui  dbconnectdialog.cpp  dbfunctions.cpp  dbfunctions.h  drawsettings.cpp  drawsettings.ui  gamaq2controlpanel.cpp  gamaq2controlpanel.h  gamaq2controlpanel.ui  importconfigurationfile.h  importconfigurationfile.ui  insertclusterdialog.cpp  insertobservationdialog.cpp  insertobservationdialog.h  insertobservationdialog.ui  moc_adjustment.cpp  moc_adjustmentresults.cpp  moc_dbconnect.cpp  moc_dbconnectdialog.cpp  moc_dbfunctions.cpp  moc_drawsettings.cpp  moc_gamag2controlpanel.cpp  moc_gamalocalpointmodel.cpp  moc_importconfigurationfile.cpp  moc_networkadjustmentpanel.cpp  moc_pointeditor.cpp  moc_pointtypecombobox.cpp  moc_selectconfiguration.cpp  networkadjustmentpanel.cpp  networkadjustmentpanel.h  observationeditor.cpp  observationeditor.h  (+14 more)
